Add budget autocomplete endpoint
